@@ -1,3 +1,8 @@
+2016-04-15  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* src/pam-config.c (replace_obsolete_modules): Replace used, but
+	obsolete and no longer installed modules with their successor.
+
 2016-04-14  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* src/pam-config.8.xml-header: Document some missing options.
